# TauCeti

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Config.mk  LICENCE.md  LICENSE.md  Makefile  PRIVACY.md  README.md  TauCeti.ini  default.nix  main.c
.ci/: appveyor-deps.sh
TauCeti/: CMakeLists.txt
res/: TauCeti.tiled-project  default.ini
res/maps/: city.json  city.tmx
res/tilesets/: city.json  city.tsx
src/: Android.mk  EventHandler.c  EventHandler.h  Main.c  Makefile  Render.c  Render.h  Resources.c  Resources.h  World.c  World.h  main.c
work/xcf/: city.xcf  player.xcf  vehicle-misc1.xcf  vehicle-misc2.xcf  vehicle-police.xcf  vehicle-truck.xcf  vehicles.xcf
